--- a/common/math/graphics/pdfs/shell_seq_whaar9.tex
+++ b/common/math/graphics/pdfs/shell_seq_whaar9.tex
@@ -7,5 +7,5 @@
 \begin{document}%
   \gsize%
   \psset{xunit=3mm,yunit=5mm}%
-  \input{../../common/symseq/graphics/seq_whaar9.tex}%
+  \input{../symseq/seq_whaar9.tex}%
 \end{document}%
