--- a/common/seq.tex
+++ b/common/seq.tex
@@ -495,8 +495,7 @@ Let $\ff\in\clFzz$\ifsxref{relation}{def:clFxy} be a \prope{strictly monotone} f
   \citerppg{sutherland1975}{123}{124}{0198531613} %{Proposition 9.23}
   %\citerpgc{rosenlicht}{52}{0486650383}{Proposition}\\
   }
-\label{thm:comcls}
-%\label{prop:comcls_com}
+\label{thm:comcls_dspace}
 %---------------------------------------
 %Let $\dspaceX$ be a \structe{metric space}.
 %Let $\dspaceA$ be a \structe{subspace} of a \structe{distance space} $\dspaceX$ \xref{def:dspace}.
@@ -535,7 +534,7 @@ Let $\clsA$ be the \structe{closure} \xref{def:clsA} of a $\setA$ in a
             Let this limit be $y$. Note that $y\in\setA$.\label{item:com_cls_yY}
       %\item By \prefp{prop:xn_to_xy}, limits are \prope{unique}, so $y=x$. \label{item:com_cls_yx}
       \item By hypothesis 1, limits are \prope{unique}, so $y=x$. \label{item:com_cls_yx}
-      \item Because $y\in\setA$ (\pref{item:com_cls_yY}) and $y=x$ (\pref{item:com_cls_yx}), so $x\in\setA$.
+      \item Because $y\in\setA$ \xref{item:com_cls_yY} and $y=x$ \xref{item:com_cls_yx}, so $x\in\setA$.
       \item Therefore, $x\in\clsA\implies x\in\setA$ and $\clsA\subseteq\setA$.
     \end{enumerate}
 \end{enumerate}
@@ -643,7 +642,7 @@ Let $\ff:\Z\to\Z$ be a strictly increasing function such that $\ff(n)<\ff(n+1)$.
   \citerp{davis2005}{28},
   \citerp{hausdorff1937e}{150}
   }
-\label{thm:cantor_int}
+\label{thm:cantor_int_dspace}
 \label{thm:cit}
 \index{Cantor intersection theorem}
 \index{theorems!Cantor intersection}
@@ -1254,12 +1253,12 @@ In this case, all Cauchy sequences are convergent and the Cauchy property is ref
   }
 %---------------------------------------
 \begin{theorem}
-\label{thm:convergent==>cauchy}
 \footnote{
   \citerpgc{giles1987}{49}{0521359287}{Theorem 3.30},
   \citerpg{rosenlicht}{51}{0486650383},
   \citerppgc{apostol1975}{72}{73}{0201002884}{Theorem 4.6}
   }
+\label{thm:convergent==>cauchy}
 %---------------------------------------
 Let $\seqxZ{x_n\in\setX}$ be a sequence in the metric space $\metspaceX$.
 \thmbox{
@@ -1352,7 +1351,7 @@ $\metrica{x}{y}\eqd\abs{x-y}$.
   \\&\le \metric{x}{x_n} + \brs{ \metric{x_n}{y_n} + \metric{y_n}{y} } -\metric{x_n}{y_n}
     &&   \text{by triangle inequality \ifdochas{metric}{\prefpo{def:metric}}}
   \\&=   \metric{x}{x_n} + \metric{y}{y_n}
-    &&   \text{by definition of metric \ifdochas{metric}{(\prefpo{def:metric})}}
+    &&   \text{by definition of metric\ifsxref{metric}{def:metric}}
   \\&<   \varepsilon + \varepsilon
     &&   \text{by left hypothesis}
   \\&=   2\varepsilon
@@ -1367,12 +1366,12 @@ This is in contrast to the more general topological spaces where a sequence \hie
 \xref{ex:seq_xt31}.
 
 %---------------------------------------
-\begin{theorem}[Uniqueness of limit]
-\label{thm:xn_to_xy}
+\begin{theorem}[\thmd{Uniqueness of limit}]
 \footnote{
   \citerpg{rosenlicht}{46}{0486650383},
   \citerpgc{thomson2008}{32}{143484367X}{Theorem 2.8}
   }
+\label{thm:xn_to_xy}
 %---------------------------------------
 Let $\metspaceX$ be a \prope{metric space}\index{space!metric}.
 Let $x,y,\in \setX$ and let $\seqn{x_n}$ be an $\setX$-valued sequence.
@@ -1477,7 +1476,6 @@ Let $\metspaceX$ be a \structe{metric space}\ifsxref{metric}{def:metric}.
   %\citerpgc{rosenlicht}{52}{0486650383}{Proposition}\\
   }
 \label{thm:comcls}
-%\label{prop:comcls_com}
 %---------------------------------------
 %Let $\metspaceX$ be a \structe{metric space}.
 %Let $\metspaceA$ be a \structe{subspace} of a metric space $\metspaceX$.
@@ -1502,19 +1500,19 @@ Let $\clsA$ be the \structe{closure} \xref{def:clsA} of $\setA$ in $\metspaceX$.
 \item Proof that \prope{complete} $\implies$ \prope{closed}:
 \begin{enumerate}
   \item Proof that $\setA\subseteq\clsA$: \prefp{lem:intAAclsA}
-  \item Proof that $\clsA\subseteq\setA$ (proof that $x\in\clsA$ $\implies$ $x\in\setA$):
-    \begin{enumerate}
-      \item Let $x$ be a point in $\clsA$ ($x\in\clsA$).
-      \item Define a sequence of open balls $\seqn{\ball{x}{\frac{1}{1}},\,\ball{x}{\frac{1}{2}},\,\ball{x}{\frac{1}{3}},\,\ldots}$.
-      \item Define a sequence of points $\seqn{x_1,\,x_2,\,x_3,\,\ldots}$ such that $x_n\in\ball{x_n}{\frac{1}{n}}\seti\setA$.
-      \item Then $\seqn{x_n}$ is \prope{convergent} in $\setX$ with limit $x$ by \prefp{def:converge}
-      \item and  $\seqn{x_n}$ is \prope{Cauchy} in $\setA$ by \prefp{def:cauchy}.
-      \item By the left hypothesis ($\metspaceA$ is \prope{complete}), $\seqn{x_n}$ is therefore also \prope{convergent} in $\setA$.\\
-            Let this limit be $y$. Note that $y\in\setA$.\label{item:com_cls_yY}
-      \item By \prefp{thm:xn_to_xy}, limits are \prope{unique}, so $y=x$. \label{item:com_cls_yx}
-      \item Because $y\in\setA$ (\pref{item:com_cls_yY}) and $y=x$ (\pref{item:com_cls_yx}), so $x\in\setA$.
-      \item Therefore, $x\in\clsA\implies x\in\setA$ and $\clsA\subseteq\setA$.
-    \end{enumerate}
+  \item Proof that $\clsA\subseteq\setA$ (proof that $x\in\clsA$ $\implies$ $x\in\setA$): by \prefp{thm:comcls_dspace}
+    %\begin{enumerate}
+    %  \item Let $x$ be a point in $\clsA$ ($x\in\clsA$).
+    %  \item Define a sequence of open balls $\seqn{\ball{x}{\frac{1}{1}},\,\ball{x}{\frac{1}{2}},\,\ball{x}{\frac{1}{3}},\,\ldots}$.
+    %  \item Define a sequence of points $\seqn{x_1,\,x_2,\,x_3,\,\ldots}$ such that $x_n\in\ball{x_n}{\frac{1}{n}}\seti\setA$.
+    %  \item Then $\seqn{x_n}$ is \prope{convergent} in $\setX$ with limit $x$ by \prefp{def:converge}
+    %  \item and  $\seqn{x_n}$ is \prope{Cauchy} in $\setA$ by \prefp{def:cauchy}.
+    %  \item By the left hypothesis ($\metspaceA$ is \prope{complete}), $\seqn{x_n}$ is therefore also \prope{convergent} in $\setA$.\\
+    %        Let this limit be $y$. Note that $y\in\setA$.\label{item:com_cls_yY}
+    %  \item By \prefp{thm:xn_to_xy}, limits are \prope{unique}, so $y=x$. \label{item:com_cls_yx}
+    %  \item Because $y\in\setA$ (\pref{item:com_cls_yY}) and $y=x$ (\pref{item:com_cls_yx}), so $x\in\setA$.
+    %  \item Therefore, $x\in\clsA\implies x\in\setA$ and $\clsA\subseteq\setA$.
+    %\end{enumerate}
 \end{enumerate}
 
 \item Proof that \prope{complete} and \prope{closed} $\implies$ \prope{complete}:
@@ -1606,31 +1604,32 @@ $\seqnZ{\setA_n}$ a sequence with each $\setA_n\in\psetX$, and $\seto{\setA}$ th
     4. & $\diam \setA_n \to 0$                           &
   \end{array}}
   \qquad\implies\qquad
-  \seto{ \bigcap_{n\in\Zp} \setA_n } = 1
+  \brb{\seto{\ds\setopi_{n\in\Zp} \setA_n } = 1}
   }
 \end{theorem}
 \begin{proof}
-\begin{enumerate}
-\item Proof that $\seto{\setopi_{n\in\Z} \setA_n}<2$:
-  \begin{enumerate}
-    \item Let $\setA\eqd\seti \setA_n$.
-    \item $x\ne y \land \{x,y\}\in \setA \implies \metric{x}{y}>0 \land \{x,y\}\subseteq \setA_n \forall n$
-    \item $\exists n \st \diam \setA_n < \metric{x}{y}$ by left hypothesis
-    \item $\implies \exists n \st \sup\set{\metric{x}{y}}{x,y\in \setA_n}<\metric{x}{y}$
-    \item This is a contradiction, so $\{x,y\}\notin \setA$ and $\seto{\setopi \setA_n}<2$.
-  \end{enumerate}
-
-\item Proof that $|\seti \setA_n|\ge1$:
-  \begin{enumerate}
-    \item Let $x_n\in \setA_n$ and $x_m\in \setA_m$
-    \item $\forall \varepsilon,\; \exists\xN\in\Zp \st \setA_N < \varepsilon$
-    \item $\forall m,n>\xN,\; x_n\in \setA_n\subseteq \setA_N$ and $x_m\in \setA_m\subseteq \setA_N$
-    \item $\metric{x_n}{x_m}\le\diam \setA_N < \varepsilon \implies \{x_n\}$ is a Cauchy sequence
-    \item Because $\{x_n\}$ is complete, $x_n\to x$.
-    \item $\implies x\in cls\setA_n = \setA_n$
-    \item $\implies |\setA_n|\ge1$
-  \end{enumerate}
-\end{enumerate}
+By \prefp{thm:cantor_int_dspace}
+%\begin{enumerate}
+%\item Proof that $\seto{\setopi_{n\in\Z} \setA_n}<2$:
+%  \begin{enumerate}
+%    \item Let $\setA\eqd\seti \setA_n$.
+%    \item $x\ne y \land \{x,y\}\in \setA \implies \metric{x}{y}>0 \land \{x,y\}\subseteq \setA_n \forall n$
+%    \item $\exists n \st \diam \setA_n < \metric{x}{y}$ by left hypothesis
+%    \item $\implies \exists n \st \sup\set{\metric{x}{y}}{x,y\in \setA_n}<\metric{x}{y}$
+%    \item This is a contradiction, so $\{x,y\}\notin \setA$ and $\seto{\setopi \setA_n}<2$.
+%  \end{enumerate}
+%
+%\item Proof that $|\seti \setA_n|\ge1$:
+%  \begin{enumerate}
+%    \item Let $x_n\in \setA_n$ and $x_m\in \setA_m$
+%    \item $\forall \varepsilon,\; \exists\xN\in\Zp \st \setA_N < \varepsilon$
+%    \item $\forall m,n>\xN,\; x_n\in \setA_n\subseteq \setA_N$ and $x_m\in \setA_m\subseteq \setA_N$
+%    \item $\metric{x_n}{x_m}\le\diam \setA_N < \varepsilon \implies \{x_n\}$ is a Cauchy sequence
+%    \item Because $\{x_n\}$ is complete, $x_n\to x$.
+%    \item $\implies x\in cls\setA_n = \setA_n$
+%    \item $\implies |\setA_n|\ge1$
+%  \end{enumerate}
+%\end{enumerate}
 \end{proof}
 
 
