--- a/common/kl_seq.tex
+++ b/common/kl_seq.tex
@@ -397,25 +397,23 @@ Here other than at lag=0, the greatest\footnote{$20\log_{10}\brp{\frac{0.5918556
 
 \item Eigen analysis
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen.pdf}
-The DFT primary frequencies of the first 10 of these eigen values are
-\\$\begin{array}{|r|r|r|r|}
+\\The DFT primary frequencies of the first 10 of these eigen values are
+\\$\begin{array}{|r|r|r|r|MlM|}
   \hline
-     1 & 253.543147 &  0.089955 & 11.116667 
-  \\ 2 & 250.981384 &  0.089955 & 11.116667 
-  \\ 3 & 119.265072 &  0.095952 & 10.421875 
-  \\ 4 & 119.253338 &  0.095952 & 10.421875 
-  \\ 5 &  96.288166 &  0.101949 &  9.808824 
-  \\ 6 &  95.069013 &  0.083958 & 11.910714 
-  \\ 7 &  73.982222 &  0.011994 & 83.375000 
-  \\ 8 &  67.216471 &  0.011994 & 83.375000 
-  \\ 9 &  51.990321 &  0.083958 & 11.910714 
-  \\10 &  50.999349 &  0.083958 & 11.910714 
-  \\11 &  34.936578 &  0.017991 & 55.583333 
-  \\12 &  33.830843 &  0.017991 & 55.583333 
+     1 & 253.543147 &  0.089955 & 11.116667 & weighted period using 1    : & 11.11666667 & years
+  \\ 2 & 250.981384 &  0.089955 & 11.116667 & weighted period using 1--2 : & 11.11666667 & years
+  \\ 3 & 119.265072 &  0.095952 & 10.421875 & weighted period using 1--3 : & 10.98382640 & years
+  \\ 4 & 119.253338 &  0.095952 & 10.421875 & weighted period using 1--4 : & 10.89363702 & years
+  \\ 5 &  96.288166 &  0.101949 &  9.808824 & weighted period using 1--5 : & 10.76918709 & years
+  \\ 6 &  95.069013 &  0.083958 & 11.910714 & weighted period using 1--6 : & 10.88532991 & years
+  \\ 7 &  73.982222 &  0.011994 & 83.375000 & weighted period using 1--7 : & 16.20369641 & years
+  \\ 8 &  67.216471 &  0.011994 & 83.375000 & weighted period using 1--8 : & 20.40137489 & years
+  \\ 9 &  51.990321 &  0.083958 & 11.910714 & weighted period using 1--9 : & 20.00989172 & years
+  \\10 &  50.999349 &  0.083958 & 11.910714 & weighted period using 1--10: & 19.65942777 & years
+  \\11 &  34.936578 &  0.017991 & 55.583333 & weighted period using 1--11: & 20.69365308 & years
+  \\12 &  33.830843 &  0.017991 & 55.583333 & weighted period using 1--12: & 21.63993254 & years
   \\\hline
 \end{array}$
-\\
-The eigen value weighted average of the first six primary frequencies is 10.88532991 years.
 \end{enumerate}
 \end{example}
 
