--- a/common/kl_seq.tex
+++ b/common/kl_seq.tex
@@ -400,6 +400,8 @@ Here other than at lag=0, the greatest\footnote{$20\log_{10}\brp{\frac{0.5918556
 \\The DFT primary frequencies of the first 10 of these eigen values are
 \\$\begin{array}{|r|r|r|r|MlM|}
   \hline
+     n & \lambda_n  & \mc{1}{N|}{$f$ (Hz)} & \mc{1}{N|}{$T$ (years)} & \mc{3}{N|}{Weighted period using $1$--$n$ (years)} 
+  \\\hline
      1 & 253.543147 &  0.089955 & 11.116667 & weighted period using 1    : & 11.11666667 & years
   \\ 2 & 250.981384 &  0.089955 & 11.116667 & weighted period using 1--2 : & 11.11666667 & years
   \\ 3 & 119.265072 &  0.095952 & 10.421875 & weighted period using 1--3 : & 10.98382640 & years
