--- a/common/kl_seq.tex
+++ b/common/kl_seq.tex
@@ -396,6 +396,10 @@ Here other than at lag=0, the greatest\footnote{$20\log_{10}\brp{\frac{0.5918556
 \\Here is a plot using Welch Method with number of segments = 4:
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_psd.pdf}
 
+\item Fourier analysis: Scaled zero-mean Sunspot projected onto sinusoidal basis using DFT/FFT
+\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_coefs_Real.pdf}
+\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_coefs_Imag.pdf}
+
 \item Eigen analysis
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen.pdf}
 \\The DFT primary frequencies of the first 10 of these eigen values are
@@ -424,8 +428,8 @@ Here other than at lag=0, the greatest\footnote{$20\log_{10}\brp{\frac{0.5918556
 \item Eigen synthesis using 1, 6, and 105 coefficients:
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen_syn.pdf}
 
-\item The auto-correlation of the coefficient sequence demonstrates that 
-      the sequence is much whiter than the original sunspot data sequence:
+\item The ACF of the eigen coefficient sequence demonstrates that 
+      it is much whiter than the original sunspot data sequence:
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_coefs_acf.pdf}
 \end{enumerate}
 \end{example}
