--- a/common/kl_seq.tex
+++ b/common/kl_seq.tex
@@ -403,6 +403,8 @@ Here other than at lag=0, the greatest\footnote{$20\log_{10}\brp{\frac{0.5918556
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_coefs_Imag.pdf}
 \\ACF of the coefficients
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_acf.pdf}
+\\Synthesis
+\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_syn.pdf}
 
 \item Eigen analysis
 \\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen.pdf}
