--- a/common/kl_seq.tex
+++ b/common/kl_seq.tex
@@ -14,7 +14,7 @@
 \begin{definition}
 \label{def:opRnm}
 %---------------------------------------
-Let $\rvx(n)$ and $\rvy(n)$ be \fncte{random process}s. 
+Let $\rvx(n)$ and $\rvy(n)$ be \fncte{random process}s.
 Let $\Rxx(n,m)$ be the \fncte{auto-correlation} \xref{def:Rxxnm} of $\rvx(n)$.
 \defboxt{
   The \opd{auto-correlation operator} $\opRx$ of $\rvy(n)$ is defined as
@@ -26,10 +26,10 @@ Let $\Rxx(n,m)$ be the \fncte{auto-correlation} \xref{def:Rxxnm} of $\rvx(n)$.
 \begin{definition}
 \label{def:white_seq}
 %---------------------------------------
-Let $\rvx(n)$ and $\rvy(n)$ be \fncte{random process}s. 
+Let $\rvx(n)$ and $\rvy(n)$ be \fncte{random process}s.
 Let $\Rxx(n,m)$ be the \fncte{auto-correlation} of $\rvx(n)$.
 \defboxt{
-  A \fncte{random process} $\rvx(n)$ is \propd{white} if 
+  A \fncte{random process} $\rvx(n)$ is \propd{white} if
   \\\indentx$\Rxx(m)=K\kdelta(m)$\quad for some $K>0$.
   }
 \end{definition}
@@ -104,10 +104,10 @@ Let $\opRx$ be an \ope{auto-correlation} operator.
      &= \inprod{\sum_{m\in\Z}\Rxx(n,m) \rvx(m) }{\fy(n)}
      && \text{by definition of $\opRx$}
      && \text{\xref{def:opRnm}}
-   \\&= \sum_{m\in\Z}\rvx(m) \inprod{\Rxx(n,m)  }{\fy(n)} 
+   \\&= \sum_{m\in\Z}\rvx(m) \inprod{\Rxx(n,m)  }{\fy(n)}
      && \text{by \prope{additive} property of $\inprodn$}
      && \text{\ifsxref{vsinprod}{def:inprod}}
-   \\&= \sum_{m\in\Z}\rvx(m) \inprod{\fy(n)}{\Rxx(n,m)}^\ast 
+   \\&= \sum_{m\in\Z}\rvx(m) \inprod{\fy(n)}{\Rxx(n,m)}^\ast
      && \text{by \prope{conjugate symmetry} prop.}
      && \text{\ifsxref{vsinprod}{def:inprod}}
    \\&= \inprod{ \rvx(m) }{\inprod{\fy(n)}{\Rxx(n,m)} }
@@ -160,7 +160,7 @@ Let $\seq{\lambda_n}{n\in\Z}$ be the \fncte{eigenvalue}s and
 \item Proof that eigenvalues are \prope{real-valued}:
   \begin{align*}
     \text{$\opRx$ is \prope{self-adjoint}}
-      & 
+      &
       && \text{by \prefp{thm:opR}}
     \\&\implies \text{eigenvalues of $\opRx$ are \prope{real}}
       && \text{\ifsxref{operator}{thm:self_adjoint}}
@@ -225,7 +225,7 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opRx$ such that
   \item Define $\ds\dotx_n \eqd \inprod{\rvx(m)}{\fpsi_n(m)}
                            \eqd \sum_{m\in\Z} \rvx(m) \fpsi_n(m)$
         \label{idef:kle_xdot}
- %\item Define $\ds\opRx\rvx(p) \eqd \int_{u\in\R} \Rxx(p,u)\rvx(u)\du$ 
+ %\item Define $\ds\opRx\rvx(p) \eqd \int_{u\in\R} \Rxx(p,u)\rvx(u)\du$
 
   \item lemma: \label{ilem:kle_mercer}
         $\ds\pE\brs{\rvx(m)\rvx(m)} = \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(m)}^2$. Proof:
@@ -258,23 +258,23 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opRx$ such that
     \begin{align*}
        &\pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(p)\brp{\sum_{m\in\Z}\dotx_m \fpsi_m(p)}^\ast}
        \\&\eqd \pE\brs{\sum_{n\in\Z}\int_{u\in\R}\rvx(u)\fpsi_n^\ast(u)\du   \fpsi_n(p)\brp{\sum_{m\in\Z}\int_v \rvx(v)\fpsi_m^\ast(v)\dv \fpsi_m(p)}^\ast}
-         && \text{by definition of $\dotx$ 
+         && \text{by definition of $\dotx$
                   \xref{idef:kle_xdot}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \pE\brs{\rvx(u)\rvx^\ast(v)}\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(p)   \fpsi_m^\ast(p)
-         && \text{by \prope{linearity} 
+         && \text{by \prope{linearity}
                   \ifxref{expectation}{thm:pE_linop}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \Rxx(u,v)\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(p)   \fpsi_m^\ast(p)
-         && \text{by definition of $\Rxx(p,u)$ 
+         && \text{by definition of $\Rxx(p,u)$
                   \xref{def:Rxx}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\opRx\fpsi_m(u)} \fpsi_n^\ast(u)\du   \fpsi_n(p)   \fpsi_m^\ast(p)
-         && \text{by definition of $\opRx$ 
+         && \text{by definition of $\opRx$
                   \xref{def:opRnm}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\lambda_m\fpsi_m(u)} \fpsi_n^\ast(u)\du   \fpsi_n(p)   \fpsi_m^\ast(p)
          && \text{by property of \structe{eigen-system}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \brp{\int_{u\in\R}\fpsi_m(u) \fpsi_n^\ast(u)\du }   \fpsi_n(p)   \fpsi_m^\ast(p)
          && \text{by \prope{linearity}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \norm{\fpsi(p)}^2 \kdelta_{mn}   \fpsi_n(p)   \fpsi_m^\ast(p)
-         && \text{by \prope{orthogonal} property  
+         && \text{by \prope{orthogonal} property
                   \xref{thm:opR_eigen}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \kdelta_{mn}   \fpsi_n(p)   \fpsi_m^\ast(p)
          && \text{by \prope{normalized} hypothesis}
@@ -311,7 +311,7 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opRx$ such that
 %=======================================
 \section{Quasi-basis}
 %=======================================
-The \ope{auto-correlation operator} $\opRx$ \xref{def:opRnm} in the discrete case can be approximated using 
+The \ope{auto-correlation operator} $\opRx$ \xref{def:opRnm} in the discrete case can be approximated using
 a \ope{correlation matrix}. In the \prope{zero-mean} case, this becomes
 \\\indentx$\ds\opRx\eqd
 \brs{\begin{array}{cccc}
@@ -322,13 +322,13 @@ a \ope{correlation matrix}. In the \prope{zero-mean} case, this becomes
 \end{array}}
 $
 
-The eigen-vectors (and hence a quasi-basis) for $\opRx$ can be found using a 
+The eigen-vectors (and hence a quasi-basis) for $\opRx$ can be found using a
 \ope{Cholesky Decomposition}.
 
 %---------------------------------------
 \begin{proposition}
 \footnote{
-  See 
+  See
   \citerpgc{clarkson1993}{131}{0849386098}{\textsection ``Appendix 3A --- Positive Semi-Definite Form of the Autocorrelation Matrix"}
   }
 %---------------------------------------
@@ -342,11 +342,11 @@ The eigen-vectors (and hence a quasi-basis) for $\opRx$ can be found using a
 %---------------------------------------
 For more information about the properties of \opb{Toeplitz matrices}, see
 \begin{enume}
-  \item \citer{grenander1958}, 
+  \item \citer{grenander1958},
   \item \citer{widom1965},
   \item \citeP{gray1971},
   \item \citerpgc{smylie1973}{408}{9780323148368}{\textsection \scshape ``B. Properties of the Toeplitz Matrix"},
-  \item \citer{grenander1984}, 
+  \item \citer{grenander1984},
   \item \citer{haykin1979},
   \item \citer{haykin1983},
   \item \citerppgc{marple1987}{80}{92}{9780132141499}{\textsection {\scshape``3.8 The Toeplitz Matrix"}},
@@ -359,96 +359,4 @@ For more information about the properties of \opb{Toeplitz matrices}, see
 %=======================================
 \section{Examples}
 %=======================================
-%---------------------------------------
-\begin{example}
-%---------------------------------------
-Sunspot data:\footnote{\citer{wdcsilo_sunspot_20210524}}
-\\\includegraphics[width=\tw]{../common/math/graphics/pdfs/sunspots.pdf}
-\\The period the sunspot activity can be estimated using several methods:
-\begin{enumerate}
-
-\item Period estimation using an estimated \fncte{auto-correlation function} (ACF);
-Here other than at lag=0, the greatest\footnote{$20\log_{10}\brp{\frac{0.5918556724}{0.3730703718}}\eqa4.01$dB greater}
- correlation occurs at 10.42 years \ldots implying a sunspot oscillation with estimated period 10.42 years.
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_acf.pdf}
-
-  \item Period estimation using the \fncte{power spectral density} (PSD) of sunspot data, PSD estimated in turn using the \ope{Welch Method}:
-\\\indentx$\brbr{\begin{array}{|r|l|r|}
-  \hline
-  \mc{1}{|N}{number of} & \mc{1}{|N}{peak frequency} & \mc{1}{|N|}{period}\\
-  \mc{1}{|N}{segments}  & \mc{1}{|N}{(samples/year)} & \mc{1}{|N|}{(years)}
-  \\\hline
-     2 & 0.08812729 & 11.34722222
-  \\ 3 & 0.08823529 & 11.33333333
-  \\ 4 & 0.08823529 & 11.33333333
-  \\ 5 & 0.09202454 & 10.86666667
-  \\ 6 & 0.08823529 & 11.33333333
-  \\ 7 & 0.10300429 &  9.70833333
-  \\ 8 & 0.08823529 & 11.33333333
-  \\ 9 & 0.09944751 & 10.05555556
-  \\10 & 0.11042945 &  9.05555556
-  \\\hline
-\end{array}} \begin{array}{MclM}
-               mode   period &\eqa& 11.3 & years\\
-               median period &\eqa& 11.3 & years\\
-               mean   period &\eqa& 10.7 & years
-             \end{array}$
-\\Here is a plot using Welch Method with number of segments = 4:
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_psd.pdf}
-
-\item DFT analysis: The basis vectors are sampled sinusoids.
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_basis.pdf}
-\\Coefficients can be calculated by projecting scaled zero-mean sunspot data onto sinusoidal basis using DFT/FFT
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_coefs_Real.pdf}
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_coefs_Imag.pdf}
-\\ACF of the coefficients
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_acf.pdf}
-\\Synthesis
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_dft_syn.pdf}
-
-\item Eigen analysis
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen.pdf}
-\\The DFT primary frequencies of the first 10 of these eigen values are
-\\$\begin{array}{|r|r|r|r|MlM|}
-  \hline
-     n & \lambda_n  & \mc{1}{N|}{$f$ (Hz)} & \mc{1}{N|}{$T$ (years)} & \mc{3}{N|}{Weighted period using $1$--$n$ (years)} 
-  \\\hline
-     1 & 253.543147 &  0.089955 & 11.116667 & weighted period using 1    : & 11.11666667 & years
-  \\ 2 & 250.981384 &  0.089955 & 11.116667 & weighted period using 1--2 : & 11.11666667 & years
-  \\ 3 & 119.265072 &  0.095952 & 10.421875 & weighted period using 1--3 : & 10.98382640 & years
-  \\ 4 & 119.253338 &  0.095952 & 10.421875 & weighted period using 1--4 : & 10.89363702 & years
-  \\ 5 &  96.288166 &  0.101949 &  9.808824 & weighted period using 1--5 : & 10.76918709 & years
-  \\ 6 &  95.069013 &  0.083958 & 11.910714 & weighted period using 1--6 : & 10.88532991 & years
-  \\ 7 &  73.982222 &  0.011994 & 83.375000 & weighted period using 1--7 : & 16.20369641 & years
-  \\ 8 &  67.216471 &  0.011994 & 83.375000 & weighted period using 1--8 : & 20.40137489 & years
-  \\ 9 &  51.990321 &  0.083958 & 11.910714 & weighted period using 1--9 : & 20.00989172 & years
-  \\10 &  50.999349 &  0.083958 & 11.910714 & weighted period using 1--10: & 19.65942777 & years
-  \\11 &  34.936578 &  0.017991 & 55.583333 & weighted period using 1--11: & 20.69365308 & years
-  \\12 &  33.830843 &  0.017991 & 55.583333 & weighted period using 1--12: & 21.63993254 & years
-  \\\hline
-\end{array}$
-
-\item Coefficients calculated by projecting data onto eigen vectors:
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen_coefs.pdf}
-
-\item Eigen synthesis using 1, 6, and 105 coefficients:
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_eigen_syn.pdf}
-
-\item The ACF of the eigen coefficient sequence demonstrates that 
-      it is much whiter than the original sunspot data sequence:
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_coefs_acf.pdf}
-
-\item Walsh Sequency analysis
-\\Basis vectors:
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_0.pdf}
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_1.pdf}
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_2.pdf}
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_3.pdf}
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_4.pdf}
-\\Coefficients
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_coefs.pdf}
-\\Synthesis
-\\\includegraphics[width=\tw-12mm]{../common/math/graphics/pdfs/sunspots_walsh_syn.pdf}
-\end{enumerate}
-\end{example}
-
+Sunspot data --- see \prefpp{ex:sunspots}
